--- a/public/airfry/index.html
+++ b/public/airfry/index.html
@@ -21,17 +21,17 @@
     <meta itemprop="wordCount" content="5">
     <title>Airfry :: Ray&#39;s Recipe&#39;s</title>
     <link href="/airfry/index.xml" rel="alternate" type="application/rss+xml" title="Airfry :: Ray&#39;s Recipe&#39;s">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747764693" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747764693" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747764693" rel="stylesheet">
-    <link href="/css/theme.css?1747764693" rel="stylesheet">
-    <link href="/css/format-html.css?1747764693" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747764693" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747764693" defer></script>
-    <script src="/js/search.js?1747764693" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747777739" rel="stylesheet">
+    <link href="/css/theme.css?1747777739" rel="stylesheet">
+    <link href="/css/format-html.css?1747777739" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747777739" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747777739" defer></script>
+    <script src="/js/search.js?1747777739" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -41,7 +41,7 @@
       window.relearn.relBaseUri='..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747764693";
+      window.relearn.index_js_url="/searchindex.en.js?1747777739";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -184,7 +184,7 @@
           <ul class="enlarge morespace collapsible-menu">
             <li class="active " data-nav-id="/airfry/index.html"><a class="padding" href="/airfry/index.html">Airfry</a></li>
             <li class="" data-nav-id="/baking/index.html"><a class="padding" href="/baking/index.html">Baking</a></li>
-            <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a></li>
+            <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a><ul id="R-subsections-3e51cf949d399bc119efe3b15d8a6250" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/korean/index.html"><a class="padding" href="/korean/index.html">Korean</a><ul id="R-subsections-2b02217cff864519119b6160a629e11b" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/sauces_n_condiments/index.html"><a class="padding" href="/sauces_n_condiments/index.html">Sauces n Condiments</a></li>
             <li class="" data-nav-id="/snacks/index.html"><a class="padding" href="/snacks/index.html">Snacks</a></li>
@@ -207,8 +207,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747764693" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747764693" defer></script>
-    <script src="/js/theme.js?1747764693" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747777739" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747777739" defer></script>
+    <script src="/js/theme.js?1747777739" defer></script>
   </body>
 </html>
