--- a/public/indian/index.html
+++ b/public/indian/index.html
@@ -25,17 +25,17 @@ Curry’s Chicken Tikka Masala Naan">
     <meta itemprop="wordCount" content="15">
     <title>Indian :: Ray&#39;s Recipe&#39;s</title>
     <link href="/indian/index.xml" rel="alternate" type="application/rss+xml" title="Indian :: Ray&#39;s Recipe&#39;s">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747764693" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747764693" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747764693" rel="stylesheet">
-    <link href="/css/theme.css?1747764693" rel="stylesheet">
-    <link href="/css/format-html.css?1747764693" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747764693" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747764693" defer></script>
-    <script src="/js/search.js?1747764693" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747777739" rel="stylesheet">
+    <link href="/css/theme.css?1747777739" rel="stylesheet">
+    <link href="/css/format-html.css?1747777739" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747777739" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747777739" defer></script>
+    <script src="/js/search.js?1747777739" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -45,7 +45,7 @@ Curry’s Chicken Tikka Masala Naan">
       window.relearn.relBaseUri='..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747764693";
+      window.relearn.index_js_url="/searchindex.en.js?1747777739";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -123,7 +123,7 @@ Curry’s Chicken Tikka Masala Naan">
             <li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement" class=""><span itemprop="name">Indian</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/filipino/ginataang_manok/index.html" title="Ginataang Manok (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/filipino/lumpia/index.html" title="Lumpia (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/indian/tika_masala/index.html" title="Chicken tikka masala (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -210,7 +210,7 @@ Curry’s Chicken Tikka Masala Naan">
           <ul class="enlarge morespace collapsible-menu">
             <li class="" data-nav-id="/airfry/index.html"><a class="padding" href="/airfry/index.html">Airfry</a></li>
             <li class="" data-nav-id="/baking/index.html"><a class="padding" href="/baking/index.html">Baking</a></li>
-            <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a></li>
+            <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a><ul id="R-subsections-3e51cf949d399bc119efe3b15d8a6250" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/korean/index.html"><a class="padding" href="/korean/index.html">Korean</a><ul id="R-subsections-2b02217cff864519119b6160a629e11b" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/sauces_n_condiments/index.html"><a class="padding" href="/sauces_n_condiments/index.html">Sauces n Condiments</a></li>
             <li class="" data-nav-id="/snacks/index.html"><a class="padding" href="/snacks/index.html">Snacks</a></li>
@@ -234,8 +234,8 @@ Curry’s Chicken Tikka Masala Naan">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747764693" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747764693" defer></script>
-    <script src="/js/theme.js?1747764693" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747777739" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747777739" defer></script>
+    <script src="/js/theme.js?1747777739" defer></script>
   </body>
 </html>
