--- a/public/indian/tika_masala/index.html
+++ b/public/indian/tika_masala/index.html
@@ -23,19 +23,19 @@ Tipif you want to make this, marinate the chicken for a day for the best result
     <meta itemprop="name" content="Chicken tikka masala :: Ray&#39;s Recipe&#39;s">
     <meta itemprop="description" content="ForewordThis is the Recipe i use to make Chicken Tikka Masala. as always, keep in mind i go alot by feeling! adjust it to your liking. the list of spices used will be at the very end if you dont have them at home!
 Tipif you want to make this, marinate the chicken for a day for the best result! or at least a couple of hours">
-    <meta itemprop="wordCount" content="404">
+    <meta itemprop="wordCount" content="417">
     <title>Chicken tikka masala :: Ray&#39;s Recipe&#39;s</title>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747764693" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747764693" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747764693" rel="stylesheet">
-    <link href="/css/theme.css?1747764693" rel="stylesheet">
-    <link href="/css/format-html.css?1747764693" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747764693" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747764693" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747764693" defer></script>
-    <script src="/js/search.js?1747764693" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747777739" rel="stylesheet">
+    <link href="/css/theme.css?1747777739" rel="stylesheet">
+    <link href="/css/format-html.css?1747777739" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747777739" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747777739" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747777739" defer></script>
+    <script src="/js/search.js?1747777739" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -45,7 +45,7 @@ Tipif you want to make this, marinate the chicken for a day for the best result
       window.relearn.relBaseUri='..\/..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747764693";
+      window.relearn.index_js_url="/searchindex.en.js?1747777739";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -225,7 +225,7 @@ or at least a couple of hours</p>
 <h6 id="1st-add-some-oil-in-the-pan-and-cook-the-chicken-on-medium-heat-but-not-enitrely-through-just-so-it-gets-a-nice-color-once-its-almost-done-set-it-aside--do-not-clean-the-pan-">1st. Add some oil in the pan, and cook the chicken on medium heat, but not enitrely through! just so it gets a nice color, once it&rsquo;s almost done, set it aside. ! DO NOT CLEAN THE PAN !</h6>
 <h6 id="2nd-add-some-more-oil-and-add-the-onions-to-cook-them-down-once-done-you-can-add-your-garlic-and-ginger-if-you-have-fresh-ones">2nd. Add some more oil, and add the onions to cook them down, once done you can add your garlic and ginger if you have fresh ones.</h6>
 <h6 id="3rd-add-the-tomato-sauce-and-cook-it-down-aswell-2-3-minutes-should-do-the-trick-season-this-with-05-tsp-tumeric-1-2-tsp-coriander-powder-1-tsp-cumin-powder-and-05---2-tsp-chiili-powder">3rd. Add the Tomato sauce and cook it down aswell, 2-3 minutes should do the trick. season this with! 0.5 Tsp Tumeric, 1-2 Tsp Coriander powder, 1 Tsp Cumin Powder and 0.5 - 2 Tsp Chiili powder.</h6>
-<h6 id="4th-now-that-the-sauce-cooked-down-and-the-spices-unfolded-add-the-chicken-mix-well-and-add-around-600-900ml-of-water-let-it-cook-for-10-minutes-add-a-tbsp-of-garam-masala">4th. now that the sauce cooked down and the spices unfolded, add the chicken, mix well and add around 600-900ml of water. let it cook for 10 minutes (add a Tbsp of Garam Masala)</h6>
+<h6 id="4th-now-that-the-sauce-cooked-down-and-the-spices-unfolded-add-the-chicken-mix-well-and-add-around-100-300ml-of-water-let-it-cook-for-10-minutes-add-a-tbsp-of-garam-masala-add-more-water-if-you-want-it-thinner-i-personally-like-it-thicker">4th. now that the sauce cooked down and the spices unfolded, add the chicken, mix well and add around 100-300ml of water. let it cook for 10 minutes (add a Tbsp of Garam Masala, add more water if you want it thinner, i personally like it thicker)</h6>
 <h6 id="5th-and-finally-sprinkle-some-sugar-in-a-pinch-is-enough-then-add-the-heavy-cream-stir-it-around-until-it-becomes-nice-and-orange-time-to-taste">5th. and finally, sprinkle some sugar in, a pinch is enough. then add the heavy cream. stir it around until it becomes nice and orange, time to taste!</h6>
 
 <details open class=" box cstyle notices Tip">
@@ -300,7 +300,7 @@ or at least a couple of hours</p>
           <ul class="enlarge morespace collapsible-menu">
             <li class="" data-nav-id="/airfry/index.html"><a class="padding" href="/airfry/index.html">Airfry</a></li>
             <li class="" data-nav-id="/baking/index.html"><a class="padding" href="/baking/index.html">Baking</a></li>
-            <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a></li>
+            <li class="" data-nav-id="/japanese/index.html"><a class="padding" href="/japanese/index.html">Japanese</a><ul id="R-subsections-3e51cf949d399bc119efe3b15d8a6250" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/korean/index.html"><a class="padding" href="/korean/index.html">Korean</a><ul id="R-subsections-2b02217cff864519119b6160a629e11b" class="collapsible-menu"></ul></li>
             <li class="" data-nav-id="/sauces_n_condiments/index.html"><a class="padding" href="/sauces_n_condiments/index.html">Sauces n Condiments</a></li>
             <li class="" data-nav-id="/snacks/index.html"><a class="padding" href="/snacks/index.html">Snacks</a></li>
@@ -324,8 +324,8 @@ or at least a couple of hours</p>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747764693" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747764693" defer></script>
-    <script src="/js/theme.js?1747764693" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747777739" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747777739" defer></script>
+    <script src="/js/theme.js?1747777739" defer></script>
   </body>
 </html>
